# substrate

.maintain/: Dockerfile
.maintain/docker/: substrate.Dockerfile
.maintain/kubernetes/templates/: service.yaml  statefulset.yaml
.maintain/local-docker-test-network/: docker-compose.yml
client/api/src/: execution_extensions.rs
client/authority-discovery/src/: lib.rs
client/cli/src/: config.rs  runner.rs
client/consensus/babe/: Cargo.toml
client/finality-grandpa/src/: tests.rs
client/keystore/: Cargo.toml
client/network/: Cargo.toml
client/network/src/: protocol.rs  service.rs
client/offchain/: Cargo.toml
client/service/src/: builder.rs  chain_ops.rs
docs/: README.adoc
frame/assets/src/: lib.rs
frame/atomic-swap/src/: tests.rs
frame/aura/src/: mock.rs
frame/authority-discovery/src/: lib.rs
frame/authorship/src/: lib.rs
frame/babe/src/: mock.rs
frame/balances/: Cargo.toml
frame/balances/src/: lib.rs  migration.rs  tests_composite.rs  tests_local.rs
frame/benchmarking/src/: tests.rs
frame/collective/src/: lib.rs
frame/contracts/src/: exec.rs  lib.rs  migration.rs  tests.rs
frame/democracy/src/: benchmarking.rs  lib.rs  migration.rs  tests.rs  types.rs
frame/elections-phragmen/src/: lib.rs  migration.rs
frame/elections/src/: mock.rs
frame/evm/src/: lib.rs  tests.rs
frame/example-offchain-worker/src/: tests.rs
frame/example/src/: lib.rs
frame/executive/src/: lib.rs
frame/finality-tracker/src/: lib.rs
frame/generic-asset/src/: lib.rs  mock.rs
frame/grandpa/src/: lib.rs  mock.rs  tests.rs
frame/identity/: Cargo.toml
frame/identity/src/: benchmarking.rs  identities.scale  lib.rs  migration.rs  subIdentities.scale  subidentities.scale  superidentities.scale
frame/im-online/src/: lib.rs  mock.rs  tests.rs
frame/indices/: Cargo.toml
frame/indices/src/: migration.rs  mock.rs
frame/membership/src/: lib.rs
frame/multisig/src/: lib.rs  tests.rs
frame/nicks/src/: lib.rs
frame/offences/src/: lib.rs  mock.rs
frame/proxy/src/: tests.rs
frame/system/: Cargo.toml
primitives/core/: Cargo.toml
primitives/io/: Cargo.toml
primitives/keystore/: Cargo.toml
primitives/rpc/: Cargo.toml
primitives/tracing/: Cargo.toml
srml/bridge/: Cargo.toml
srml/identity/: Cargo.toml
(+98 files in other folders)
