[package]
name = "pallet-indices"
version = "2.0.0-rc3"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
license = "Apache-2.0"
homepage = "https://substrate.dev"
repository = "https://github.com/paritytech/substrate/"
description = "FRAME indices management pallet"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
hex-literal = "0.2.1"
serde = { version = "1.0.101", optional = true }
codec = { package = "parity-scale-codec", version = "1.3.1", default-features = false, features = ["derive"] }
sp-keyring = { version = "2.0.0-rc3", optional = true, path = "../../primitives/keyring" }
sp-std = { version = "2.0.0-rc3", default-features = false, path = "../../primitives/std" }
sp-io = { version = "2.0.0-rc3", default-features = false, path = "../../primitives/io" }
sp-runtime = { version = "2.0.0-rc3", default-features = false, path = "../../primitives/runtime" }
sp-core = { version = "2.0.0-rc3", default-features = false, path = "../../primitives/core" }
frame-support = { version = "2.0.0-rc3", default-features = false, path = "../support" }
frame-system = { version = "2.0.0-rc3", default-features = false, path = "../system" }

frame-benchmarking = { version = "2.0.0-rc3", default-features = false, path = "../benchmarking", optional = true }

[dev-dependencies]
pallet-balances = { version = "2.0.0-rc3", path = "../balances" }
old-system = { package = "frame-system", git = "https://github.com/paritytech/substrate.git", rev = "00a400f82539e2f78e8ddbcd98aea512c87c5f3c" }
edgeware-runtime = { git = "https://github.com/hicommonwealth/edgeware-node.git", branch = "v1.0.1redo-use-as-dep" }
edgeware-primitives = { git = "https://github.com/hicommonwealth/edgeware-node.git", branch = "v1.0.1redo-use-as-dep" }
remote-externalities = { git = "https://github.com/paritytech/substrate-debug-kit.git" }

[features]
default = ["std"]
std = [
	"serde",
	"sp-keyring",
	"codec/std",
	"sp-core/std",
	"sp-std/std",
	"sp-io/std",
	"frame-support/std",
	"sp-runtime/std",
	"frame-system/std",
	"old-system/std",
]
runtime-benchmarks = [
	"frame-benchmarking",
	"frame-support/runtime-benchmarks",
]
